Revert "add votes"
This reverts commit d7da00dae79fb567c66ab51761f25f165a0b6e9c.
